<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/title_id"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/light_pink"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_icon"
            android:src="@drawable/ic_color_palette" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/neoterique"
            android:text="@string/color_picker_title"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/select_photo_id"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/bg_round_button"
            android:clickable="true"
            android:contentDescription="@string/photos_icon"
            android:focusable="true"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add_photo_24" />

        <ImageButton
            android:id="@+id/more_options_id"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/bg_round_button"
            android:clickable="true"
            android:contentDescription="@string/more_icon"
            android:focusable="true"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_three_dots" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_above="@id/color_picker_id"
        android:layout_below="@id/title_id"
        app:lottie_rawRes="@raw/fluid_loading_animation"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerColors"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/color_picker_id"
        android:layout_below="@id/title_id"
        android:layout_marginTop="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/color_picker_id"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:fontFamily="sans-serif-medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/select_new_color"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:rippleColor="@android:color/transparent" />

</RelativeLayout>
