<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                app:srcCompat="@mipmap/ic_launcher"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/app_name"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="12sp"
                android:textColor="?attr/colorPrimaryVariant"
                android:gravity="center"
                android:id="@+id/tvUpdateDesc"
                android:padding="13dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/msg_check_for_update"
                android:fontFamily="@font/medium"
                android:layout_marginHorizontal="12dp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="?attr/colorPrimary"
                app:cardCornerRadius="12dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">
                <androidx.appcompat.widget.AppCompatTextView
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:id="@+id/tvUpdateNow"
                    android:paddingLeft="51dp"
                    android:paddingTop="12dp"
                    android:paddingRight="51dp"
                    android:paddingBottom="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check"
                    android:paddingHorizontal="51dp"
                    android:paddingVertical="12dp"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivClose"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_marginTop="18dp"
            android:tint="?attr/colorPrimary"
            android:layout_marginEnd="18dp"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_cancel_dialog"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
