<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/transparent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="13dp">
        <androidx.cardview.widget.CardView
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="18dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/back_rate_us_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:background="?attr/colorPrimary"
                    android:paddingTop="10dp"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:id="@+id/tvAppName"
                        android:padding="13dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:fontFamily="@font/bold"
                        app:fontFamily="@font/semibold"/>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatTextView
                    android:textSize="14sp"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:gravity="center"
                    android:id="@+id/tvUpdateDesc"
                    android:padding="13dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_app_msg"
                    android:fontFamily="@font/medium"/>
                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/lottie_rate"/>
                <RelativeLayout
                    android:id="@+id/rlRateButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:textSize="16sp"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:id="@+id/tvNo"
                        android:padding="18dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Later"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/medium"
                        android:layout_toStartOf="@+id/cvRateUs"/>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvRateUs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        app:cardBackgroundColor="?attr/colorPrimary"
                        app:cardCornerRadius="18dp"
                        app:cardUseCompatPadding="true">
                        <RelativeLayout
                            android:id="@+id/rlRateUs"
                            android:padding="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:textSize="16sp"
                                android:textColor="@color/white"
                                android:gravity="center"
                                android:id="@+id/tvRateNow"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rate_now"
                                android:layout_centerVertical="true"
                                android:fontFamily="@font/bold"
                                android:paddingStart="18dp"
                                android:paddingEnd="18dp"
                                android:drawablePadding="10dp"
                                app:drawableStartCompat="@drawable/thumb_up"/>
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
